solved the highest palindrome algoritm

--- a/fibonacci.html
+++ b/fibonacci.html
@@ -1,4 +1,4 @@
-<script type="text/javascript">
+cd <script type="text/javascript">
 function fibonacci(){
 	// Loop that runs until Boolean
 	// Inside the loop....
@@ -29,5 +29,5 @@ fibonacci();
 sudo apt-get update
 sudo apt-get install lamp-server^
 sud0 rm - R Canvas_Game 
-/var/www/html
-
+ 
+/var/www/html sudo git clone <URL> 
