added the bigO example

--- a/sumOfPrimes.html
+++ b/sumOfPrimes.html
@@ -3,13 +3,12 @@ Find the sum of all the primes below two million. -->
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>sumOfPrimes</title>
 </head>
 <body>
 <script type="text/javascript">
-    // prime number under 2mil
+    // prime number under 2million
 function getPrime(n){
-    // prime[prime.length-1]  2mil
  var prime = []; //We will stash all our prime numbers here.
  prime.push(2); //start with 2 as it's the first prime number
  var i = 2; //start checking prime at 3
@@ -17,25 +16,24 @@ function getPrime(n){
  while(i < n){ //Keep going until we have pushed n prime numbers on (= nth prime)
    var isPrime = true; //Assume the number is prime until we find otherwise
      for(var j = 0; j < prime.length; j++){//Divide the current number by every known prime.
-       var iByJ = i % prime[j];
-         if(iByJ === 0){
-           //this thing is not prime. We know, because it divded evenly into something
-       isPrime = false; //update the boolean
-       break; //dont waste any time looking for more. its not prime. leave the loop.
-       }
+        // console.log(i);
+        var iByJ = i % prime[j];
+        if(iByJ === 0){
+         //this thing is not prime. We know, because it divded evenly into something
+         isPrime = false; //update the boolean
+         break; //dont waste any time looking for more. its not prime. leave the loop.
+        }
      }
      if(isPrime){
        prime.push(i)
      }
      i++;
  }
-    var sum = prime.reduce(function(currentValue, totalValue){
-        return currentValue + totalValue;
-        }, 0);
-     console.log(sum)
-     return sum;
-
-
+  var sum = prime.reduce(function(currentValue, totalValue){
+      return currentValue + totalValue;
+      }, 0);
+   // console.log(sum)
+   return sum;
 }
 
 // function add(total, currentValue){
@@ -48,7 +46,7 @@ function getPrime(n){
 
 
 console.time("getPrime");
-getPrime(10);
+console.log(getPrime(11));
 console.timeEnd("getPrime");
 
 
